Fixed the absolutely outrageus gap

--- a/v4/index.css
+++ b/v4/index.css
@@ -156,6 +156,7 @@ a {
 	padding-left: .6em;
 	padding-right: .6em;
 	padding-top: .3em;
+	padding-bottom: .1em;
 }
 .first{
 	margin-top: 0px;
